force-app/main/default/objects/Asset_Hand_Over__c/Asset_Hand_Over__c.object-meta.xml
<CustomObject>
    <label>Asset Hand Over</label>
    <nameField>
        <displayFormat>AHO-{000000000}</displayFormat>
        <label>Asset Hand Over ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Asset Hand Over</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>