force-app/main/default/objects/Asset_Hand_Over__c/fields/Current_location__c.field-meta.xml
<CustomField>
    <fullName>Current_location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current location</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipName>Asset_allocation</relationshipName>
    <type>Lookup</type>
</CustomField>