force-app/main/default/objects/Asset_Hand_Over__c/fields/Current_owner__c.field-meta.xml
<CustomField>
    <fullName>Current_owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current owner</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipName>Asset_allocation</relationshipName>
    <type>Lookup</type>
</CustomField>