force-app/main/default/objects/Asset_Hand_Over__c/fields/New_Location__c.field-meta.xml
<CustomField>
    <fullName>New_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Location</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipName>Asset_allocation1</relationshipName>
    <type>Lookup</type>
</CustomField>