force-app/main/default/objects/Asset_Hand_Over__c/fields/New_owner__c.field-meta.xml
<CustomField>
    <fullName>New_owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Owner</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipName>Asset_allocation1</relationshipName>
    <type>Lookup</type>
</CustomField>