force-app/main/default/objects/Asset_Hand_Over__c/recordTypes/Employee_to_Employee.recordType-meta.xml
<RecordType>
    <fullName>Employee_to_Employee</fullName>
    <active>true</active>
    <label>Employee to Employee</label>
</RecordType>