force-app/main/default/objects/Asset_Hand_Over__c/recordTypes/Employee_to_Location.recordType-meta.xml
<RecordType>
    <fullName>Employee_to_Location</fullName>
    <active>true</active>
    <label>Employee to Location</label>
</RecordType>