force-app/main/default/objects/Asset_Hand_Over__c/recordTypes/Location_to_Employee.recordType-meta.xml
<RecordType>
    <fullName>Location_to_Employee</fullName>
    <active>true</active>
    <label>Location to Employee</label>
</RecordType>